--- a/app/globals.css
+++ b/app/globals.css
@@ -3,17 +3,14 @@
 @tailwind utilities;
 
 .modal-background {
-  position: absolute;
+  position: fixed;
   inset: 0;
-  background-color: rgba(0, 0, 0, 1);
-  z-index: 99;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 40;
 }
 
 .modal-content {
   max-height: 80vh;
   overflow-y: auto;
 }
+
